--- a/menu.css
+++ b/menu.css
@@ -38,9 +38,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    text-shadow: 3px 3px 0 rgba(0, 0, 0, .2);
 }
 .navegar li{
+    text-shadow: 3px 3px 0 rgba(0, 0, 0, .2);
     list-style: none; 
     cursor: pointer;
 }
@@ -129,7 +129,77 @@
     transform-origin: center;
     transform: rotate(45deg);
     margin-top: 5.5px;
-}     
+}
+
+
+/*------------------------- CONTACTO--------------------- */
+
+
+
+.container_contact{
+  /* background: #00fff2; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  opacity: 0;
+}
+.container_contact.active{
+  animation: bounceIn .7s 1s forwards;
+}
+
+.contact{
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  outline:none;
+  text-decoration:none;
+  color:rgb(255, 255, 255);
+  background:rgba(10, 10, 10, 0.2);
+  width:8rem;
+  border:none;
+  height:8rem;
+  border-radius:50%;
+  box-shadow:5px 5px 10px rgba(50, 50, 0, 0.2) ,-5px -5px 10px rgba(255,255,255,0.1); 
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* para borrar el recuadro azul que aparece por defecto con onclick */
+  margin-top:1em;
+}
+
+.contact:hover{
+  box-shadow: inset 5px 5px 10px rgba(50, 50, 0, 0.4) , inset -5px -5px 10px rgba(255,255,255,0.1);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  color: white;
+}
+
+
+
+@media all and (max-width:1440px){
+  .contact{
+      width: 15rem;
+      height: 15rem;
+      margin-top:30%;
+  }
+}
+
+
+@media all and (max-width:768px){
+    .container_contact{
+        flex-direction: column;
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
+    }
+    .contact{
+        height: 6rem;
+        width: 6rem;
+        font-size: 2.6rem;
+        margin-top:15%;
+    }
+}
   
   
   
