--- a/texto_inicio.css
+++ b/texto_inicio.css
@@ -25,7 +25,6 @@ html, body{
   position: relative;
   top: 10%;
   left: 15%;
-
 }
 
 h1, h2{
@@ -123,6 +122,27 @@ h1, h2{
       -webkit-clip-path: polygon(100% 0, 100% -0%, 0 100%, 0 100%);
       clip-path: polygon(100% 0, 100% -0%, 0 100%, 0 100%);
     
+  }
+}
+
+
+
+@media only screen and (max-width: 450px) {
+  .container_texto{
+    /* background: rgb(121, 255, 80); */
+    width: 90vw;
+    height: 55vh;
+    top: 6rem;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  h1, h2{
+    font-size: 40px;
+    padding: 0.5em;
+    margin-left: 5%;
   }
 }
 
