--- a/menu.css
+++ b/menu.css
@@ -57,7 +57,7 @@
     height: 60px;
     border-radius: 50%;
     background: white;
-    position: absolute;
+    position: fixed;
     z-index: 50;
     bottom: 1.5rem;
     right: 1.5rem;
@@ -66,6 +66,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    transform: translateY(-200vh);
     transition: transform 0.3s;
     /* animation: aparece_circulo 2s cubic-bezier(.7,1,.7,.9) */ /* forwards */ /* infinite */;
     animation: ballBouncing 4s linear forwards;
@@ -277,6 +278,21 @@
       bottom: -0.5rem;
     }
   }
+
+  /*-------------- MediaQuery-------------- */
+
+@media only screen and (max-width: 450px) {
+  .container_contact.active{
+    animation: bounceIn .7s 1s forwards;
+  }
+  .hamb{
+    animation: bounceIn .3s 15.5s linear forwards ;
+  }
+  .container_menu{
+    animation: ballBouncing 4s 10s linear forwards;
+}
+
+}
 
 
  
