--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ section{
 }
 .planta{
   animation: fadeInDownBig 0.9s 9s forwards, shakeX .12s 9.9s;
+  filter: drop-shadow(-2px 0px 3px rgba(50, 50, 0, 0.2));
 }
 
 
@@ -71,9 +72,10 @@ section{
   justify-content: center;
   align-items: center;
   padding: 2em;
-  width: 8em;
+  width: auto;
   top: 40%;
   right: 40%; 
+  animation: appear 0.7s 19.7s forwards;
 }
 
 
@@ -85,7 +87,7 @@ section{
   position: absolute ;
   z-index: 1;
   opacity: 0;
-  animation: bounceIn 1s 21s forwards ;
+  /* animation: bounceIn 1s 21s forwards ; */
 }
 
 .container_bocadillo::after{
@@ -94,6 +96,7 @@ section{
   height: .7em;
   top: 110%;
   right: 5%;
+  animation: appear 0.7s 20.3s forwards;
 }
 .container_bocadillo::before{
   content: '';
@@ -102,6 +105,7 @@ section{
   border-radius: 50%;
   top: 130%;
   right: 10%;
+  animation: appear 0.7s 20.8s forwards;
 }
 .bocadillo p {
   color: #774f38;
@@ -114,8 +118,8 @@ section{
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 3.5s 21s steps(30, end),
-    blink-caret .5s 21s step-end infinite;
+    typing 3.5s 22s steps(30, end),
+    blink-caret .5s 22s step-end infinite;
 }
 
 
@@ -208,6 +212,14 @@ section{
     transform: scale3d(1, 1, 1);
   }
 }
+@keyframes appear {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
 
 /* The typing effect */
 @keyframes typing {
@@ -252,6 +264,7 @@ section{
    right: 0;
    width: 150%;
    bottom: 2rem;
+   filter: drop-shadow(2px 0px 3px rgba(50, 50, 0, 0.2));
   }
   .sillon_delante{
     right: 0;
@@ -288,7 +301,7 @@ section{
   animation: bounceIn 1s 6s forwards ;
 }
 .window{
-  animation:bounceIn 1s 14.5s forwards, bg_window 20s 14.5s infinite;
+  animation:bounceIn .7s 14.5s forwards, bg_window 20s 14.5s infinite;
 }
 .sillon{
   animation: fadeInDownBig .7s 15s forwards, shakeX .12s 15.4s;
@@ -303,9 +316,9 @@ section{
   animation: fadeInDownBig 0.7s 17s forwards, shakeX .12s 17.4s;
 }
 
-.container_bocadillo,.container_bocadillo::after,.container_bocadillo::before{
+/* .container_bocadillo,.container_bocadillo::after,.container_bocadillo::before{
   animation: bounceIn 1s 19s forwards ;
-}
+} */
 
 .bocadillo p {
   animation: 
