--- a/svg.css
+++ b/svg.css
@@ -1,17 +1,29 @@
+.sillonConChica{
+/*  background: salmon; */
+ height: 500px;
+ width: 500px;
+ position: absolute;
+ bottom: 0;
+ right: 0;
+}
+
 #sillon_svg{
     /* background: green; */
-    width: 50%;
-    margin: 30% 0 0 50%;
-    display: block;
+    width: 90%;
+    /* margin: 30% 0 0 50%; */
+    /* display: block; */
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 #planta_baja{
     /* background: red; */
-    width: 35%;
+    width: 25%;
     display: block;
     position: absolute;
     top: 0;
-    
+    left: 0;   
 }
 
 .sillon_uno,.sillon_dos,.planta_baja{
@@ -54,8 +66,19 @@
     
     #planta_baja{
         /* background: red; */
-        width: 160px;
-        margin-top: 10%;
-        bottom: 0;
+        width: 100px;
+        bottom: -2rem;
+    }
+    .sillonConChica{
+        width: 250px;
+        height: 250px;
+    }
+    #sillon_svg{
+        /* background: green; */
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        top: 0;
+        left: 0;
     }
 }
