--- a/svg.css
+++ b/svg.css
@@ -17,10 +17,19 @@
     right: 0;
 }
 
+.container_planta{
+   /*  background: rgb(194, 207, 2); */
+    height: 400px;
+    width: 400px;
+    position: absolute;
+    bottom: 0;
+    left: 0; 
+}
 #planta_baja{
-    /* background: red; */
-    width: 25%;
-    display: block;
+    /* background: rgba(255, 0, 0, 0.24); */
+    width: 100%;
+    height: 100%;
+   /*  display: block; */
     position: absolute;
     top: 0;
     left: 0;   
@@ -28,7 +37,7 @@
 
 .sillon_uno,.sillon_dos,.planta_baja{
     fill-opacity: 0; /* no se ve el interior, solo el borde que ponemos despues */
-    stroke-width: 15px;
+    stroke-width: 18px;
     stroke-dashoffset: 0;
     stroke-dasharray: 80000;
 }
@@ -72,6 +81,7 @@
     .sillonConChica{
         width: 250px;
         height: 250px;
+        bottom: 2rem;
     }
     #sillon_svg{
         /* background: green; */
@@ -80,5 +90,17 @@
         margin: 0;
         top: 0;
         left: 0;
+    }
+    .container_planta{
+        /* background: rgb(194, 207, 2); */
+        height: 200px;
+        width: 150px;
+        bottom: 3.2rem;
+    }
+    #planta_baja{
+        /* background: rgba(255, 0, 0, 0.24); */
+        width: 100%;
+        height: 100%;
+
     }
 }
