--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 
 body{
   /* background: rgb(168,208,230 ); */
-  background: rgb(104, 192, 214);
+  /* background: rgb(104, 192, 214); */
+  background: rgb(140, 206, 241);
 }
 
 .container_chica{
