--- a/window.css
+++ b/window.css
@@ -26,32 +26,51 @@
       0 0 1px 90px rgba(82, 115, 149, 0.3), 0 0 1px 160px rgba(92, 115, 149, 0.1);
     animation: sun 20s 19s infinite;  
   }
-  .moon:before {
-    position: absolute;
-    content: "";
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background: #ccc;
-    top: 15px;
-    left: 8px;
-    box-shadow: 5px -12px 0 -2px #ccc, 4px 10px 0 -4px #ccc;
-    animation: hide 20s 15s infinite;
-    -webkit-animation:hide 20s 15s infinite;
-  }
-  .star {
-    height: 3px;
-    width: 3px;
-    background-color: rgb(123, 220, 255);
-    position: absolute;
-    z-index: 4;
-    top: 160px;
-    left: 120px;
-    border-radius: 50%;
-    opacity: 0.1;
-    box-shadow: 80px 120px 0 rgb(123, 220, 255), 280px 150px 0 rgb(123, 220, 255);
-    animation: twinkle 2s infinite;
-    -webkit-animation:twinkle 2s infinite;
+.moon:before {
+  position: absolute;
+  content: "";
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #ccc;
+  top: 15px;
+  left: 8px;
+  box-shadow: 5px -12px 0 -2px #ccc, 4px 10px 0 -4px #ccc;
+  animation: hide 20s 15s infinite;
+  -webkit-animation:hide 20s 15s infinite;
+}
+.star {
+  height: 3px;
+  width:3px;
+  background-color: rgb(123, 220, 255);
+  position: absolute;
+  z-index: 4;
+  top: 160px;
+  left: 120px;
+  border-radius: 50%;
+  opacity: 0.1;
+  box-shadow: 80px 120px 0 rgb(123, 220, 255),
+              180px 180px 0 rgb(123, 220, 255),
+              280px 150px 0 rgb(123, 220, 255),
+              300px -100px 0 rgb(123, 220, 255),
+              250px -20px 0 rgb(123, 220, 255),
+              80px -120px 0 rgb(123, 220, 255),
+              180px -220px 0 rgb(123, 220, 255),
+              280px -150px 0 rgb(123, 220, 255),
+              300px 100px 0 rgb(123, 220, 255),
+              250px 20px 0 rgb(123, 220, 255),
+              80px 20px 0 rgb(123, 220, 255),
+              80px 520px 0 rgb(123, 220, 255),
+              80px 550px 0 rgb(123, 220, 255),
+              10px 500px 0 rgb(123, 220, 255),
+              1px 300px 0 rgb(123, 220, 255),
+              80px 220px 0 rgb(123, 220, 255),
+              80px -120px 0 rgb(123, 220, 255),
+              100px 350px 0 rgb(123, 220, 255),
+              30px 410px 0 rgb(123, 220, 255),
+              50px 330px 0 rgb(123, 220, 255);
+  animation: twinkle 2s infinite;
+  -webkit-animation:twinkle 2s infinite;
   }
   @keyframes twinkle {
     50% {
@@ -65,27 +84,61 @@
   }
 
 
-  .star2 {
-    height: 3px;
-    width: 3px;
-    background-color: rgb(123, 220, 255);
-    position: absolute;
-    top: 250px;
-    left: 100px;
-    border-radius: 50%;
-    box-shadow: 110px -110px 0 rgb(123, 220, 255), 290px -100px 0 rgb(123, 220, 255);
-    animation-delay: 0.3s;
+.star2 {
+  height: 4px;
+  width: 4px;
+  background-color: rgb(123, 220, 255);
+  position: absolute;
+  top: 250px;
+  left: 100px;
+  border-radius: 50%;
+  box-shadow: 110px -110px 0 rgb(123, 220, 255),
+              50px -50px 0 rgb(123, 220, 255),
+              290px -100px 0 rgb(123, 220, 255),
+              330px -150px 0 rgb(123, 220, 255),
+              150px -150px 0 rgb(123, 220, 255),
+              290px 100px 0 rgb(123, 220, 255),
+              330px 150px 0 rgb(123, 220, 255),
+              150px 150px 0 rgb(123, 220, 255),
+              290px 10px 0 rgb(123, 220, 255),
+              330px 50px 0 rgb(123, 220, 255),
+              50px 50px 0 rgb(123, 220, 255),
+              110px -110px 0 rgb(123, 220, 255),
+              500px 300px 0 rgb(123, 220, 255),
+              490px 200px 0 rgb(123, 220, 255),
+              330px 350px 0 rgb(123, 220, 255),
+              -10px 220px 0 rgb(123, 220, 255),
+              290px 200px 0 rgb(123, 220, 255),
+              330px 250px 0 rgb(123, 220, 255),
+              450px 250px 0 rgb(123, 220, 255),
+              490px 110px 0 rgb(123, 220, 255),
+              400px 150px 0 rgb(123, 220, 255),
+              20px 280px 0 rgb(123, 220, 255);
+  animation-delay: 0.3s;
   }
-  .star3 {
-    height: 3px;
-    width: 3px;
-    background-color: rgb(123, 220, 255);
-    position: absolute;
-    top: 210px;
-    left: 170px;
-    border-radius: 50%;
-    box-shadow: 160px -70px 0 rgb(123, 220, 255), -170px 50px 0 rgb(123, 220, 255);
-    animation-delay: 0.6s;
+.star3 {
+  height: 4.5px;
+  width: 4.5px;
+  background-color: rgb(123, 220, 255);
+  position: absolute;
+  top: 210px;
+  left: 170px;
+  border-radius: 50%;
+  box-shadow: 160px -70px 0 rgb(123, 220, 255),
+              60px 10px 0 rgb(123, 220, 255),
+              60px 10px 0 rgb(123, 220, 255),
+              170px -50px 0 rgb(123, 220, 255),
+              170px 50px 0 rgb(123, 220, 255),
+              170px -150px 0 rgb(123, 220, 255),
+              70px 150px 0 rgb(123, 220, 255),
+              360px -270px 0 rgb(123, 220, 255),
+              260px 210px 0 rgb(123, 220, 255),
+              260px 210px 0 rgb(123, 220, 255),
+              370px -250px 0 rgb(123, 220, 255),
+              370px 250px 0 rgb(123, 220, 255),
+              370px -300px 0 rgb(123, 220, 255),
+              200px 310px 0 rgb(123, 220, 255);
+  animation-delay: 0.6s;
   }
   .shooting-star {
     position: absolute;
