--- a/style.css
+++ b/style.css
@@ -275,20 +275,24 @@ section{
     bottom: 2rem;
   }
   .container_bocadillo{
-    top: 56%;
-    left: 23%;
+    bottom: 400px;
+    right: 170px;
     padding: 1em;
   }
   .bocadillo p {
     font-size: 0.7em;
   }
   .container_bocadillo::after{
-    top: 115%;
-    right: 20%;
+    width: 1em;
+    height: .5em;
+    top: 110%;
+    right: 5%;
   }
   .container_bocadillo::before{
-    top: 150%;
-    right: 30%;
+    width: .5em;
+    height: .5em;
+    top: 130%;
+    left: 75%;
   }
 }
 
