--- a/window.css
+++ b/window.css
@@ -6,7 +6,7 @@
     z-index: -1;
     width: 80%;
     height: 70%;
-    /* background: rgb(53, 83, 137); */
+    background: rgb(53, 83, 137);
     border-radius: 33% 40% 60% 20% / 60% 40% 45% 25%;
     box-shadow: inset 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.164),
       inset 0.2rem -0.2rem 0.5rem rgba(0, 0, 0, 0.16);
@@ -238,7 +238,6 @@
 
   @media only screen and (max-width:450px){
     .window{
-        margin-top: 5em;
         width: 80%;
         height: 55%;
       }
