--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@
 }
 
 body{
-  /* background: rgb(168,208,230 ); */
-  /* background: rgb(104, 192, 214); */
   background: rgb(140, 206, 241);
 }
 
@@ -27,8 +25,6 @@ section{
 .section-img{
   width: 100%;
   position: absolute;
-  /*  right: 20%;
-  top: 10%; */
   z-index: -1;
   opacity: 0;
   animation: bounceIn 1s 6s forwards ;
@@ -43,32 +39,23 @@ section{
   border-radius: 33% 40% 60% 20% / 60% 40% 45% 25%;
   box-shadow: inset 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.164),
     inset 0.2rem -0.2rem 0.5rem rgba(0, 0, 0, 0.16);
-  animation:bounceIn 1s 15s forwards, bg_window 20s 15s infinite;
+  /*see animation down */
 }
-
- /* filter: saturate(50%); */ /* para animar la imagen noche y dia */
-
 .sillon{
   bottom: 0;
   z-index: 0;
-  animation: fadeInDownBig 0.5s 7s forwards, shakeX .12s 7.3s;
+ /*see animation down */
 }
 .sillon_delante{
   bottom: 0;
   z-index: 2;
-  animation: fadeInDownBig 0.5s 7s forwards, shakeX .12s 7.3s;
+ /*see animation down */
 }
 .chica{
   bottom: 0;
   z-index: 1;
-  animation-delay: 8s;
+ /*see animation down */
 }
-.planta{
-  animation: fadeInDownBig 0.9s 9s forwards, shakeX .12s 9.9s;
-  filter: drop-shadow(-2px 0px 3px rgba(50, 50, 0, 0.2));
-}
-
-
 .container_bocadillo{
   display: flex;
   justify-content: center;
@@ -77,11 +64,9 @@ section{
   width: auto;
   top: 40%;
   right: 30%; 
-  animation: appear 0.7s 26s forwards;
+  transition: animation  .7s;
+  /*see animation down */
 }
-
-
-
 .container_bocadillo,.container_bocadillo::after,.container_bocadillo::before{
   background: rgb(255, 255, 255);
   box-shadow: -1px 6px 3px rgba(50, 50, 0, 0.2);
@@ -97,7 +82,7 @@ section{
   height: .7em;
   top: 110%;
   right: 5%;
-  animation: appear 0.7s 26.3s forwards;
+  /*see animation down */
 }
 .container_bocadillo::before{
   content: '';
@@ -106,7 +91,7 @@ section{
   border-radius: 50%;
   top: 130%;
   right: 10%;
-  animation: appear 0.7s 26.6s forwards;
+  /*see animation down */
 }
 .bocadillo p {
   color: #774f38;
@@ -119,8 +104,8 @@ section{
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 3.5s 26s steps(30, end),
-    blink-caret .5s 26s step-end infinite;
+    typing 3.5s 25s steps(30, end),
+    blink-caret .5s 25s step-end infinite;
 }
 
 
@@ -240,9 +225,7 @@ section{
 /*-------------- MediaQuery-------------- */
 
 @media only screen and (max-width: 450px) { 
- /*  .section-img{
-    width: 100%;
-  } */
+
   body{
     overflow: hidden;
   }
@@ -296,14 +279,11 @@ section{
   }
 }
 
-/*------------- Adaptacion Animation------------- */
+/*------------- Animations------------- */
 
 
 .section-img{
   animation: bounceIn 1s 6s forwards ;
-}
-.window{
-  animation:bounceIn .7s 16s forwards, bg_window 20s 16s infinite;
 }
 .sillon{
   animation: fadeInDownBig .7s 15s forwards, shakeX .12s 15.4s;
@@ -311,12 +291,22 @@ section{
 .sillon_delante{
   animation: fadeInDownBig .7s 15s forwards, shakeX .12s 15.4s;
 }
+.window{
+  animation:bounceIn .7s 16s forwards, bg_window 20s 16s infinite;
+}
 .chica{
   animation-delay: 16.8s;
 }
-.planta{
-  animation: fadeInDownBig 0.7s 17s forwards, shakeX .12s 17.4s;
+.container_bocadillo{
+  animation: appear 0.7s 25s forwards;
 }
+.container_bocadillo::after{
+  animation: appear 0.7s 25.5s forwards;
+}
+.container_bocadillo::before{
+  animation: appear 0.7s 26s forwards;
+}
+
 
 /* .container_bocadillo,.container_bocadillo::after,.container_bocadillo::before{
   animation: bounceIn 1s 19s forwards ;
