--- a/menu.css
+++ b/menu.css
@@ -11,7 +11,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: cornflowerblue;
+    /* background-color: cornflowerblue; */
+    background: rgb(75, 173, 226);
     transition: clip-path 0.6s linear;
     clip-path: circle(0% at 100% 1%);/* circulo */
     /* clip-path: polygon(100% 47%, 100% 39%, 100% 26%, 100% 18%, 100% 0, 100% 0, 100% 100%, 100% 100%, 100% 92%, 100% 83%, 100% 72%, 100% 53%); */
@@ -94,7 +95,8 @@
     display: block;
     width: 100%;
     height: 2.3px;
-    background: cornflowerblue;
+    /* background: cornflowerblue; */
+    background: rgb(58, 134, 175);
     transition: all .3s ease;
     cursor: pointer;
 }
@@ -103,7 +105,8 @@
     position: absolute;
     width: 100%;
     height: 2.3px;
-    background: cornflowerblue;
+    /* background: cornflowerblue; */
+    background: rgb(58, 134, 175);
     content: " ";
     z-index: -1;
     transition: all .3s ease;
