--- a/menu.css
+++ b/menu.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .background-wrap{
     position: absolute;
     z-index: 50;
@@ -12,7 +16,8 @@
     justify-content: center;
     align-items: center;
     /* background-color: cornflowerblue; */
-    background: rgb(75, 173, 226);
+   /*  background: rgb(75, 173, 226); */
+   background: #0361b3;
     transition: clip-path 0.6s linear;
     clip-path: circle(0% at 100% 1%);/* circulo */
     /* clip-path: polygon(100% 47%, 100% 39%, 100% 26%, 100% 18%, 100% 0, 100% 0, 100% 100%, 100% 100%, 100% 92%, 100% 83%, 100% 72%, 100% 53%); */
@@ -54,8 +59,8 @@
     color: rgb(48, 23, 128);   
 }
 .container_menu{
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     background: white;
     position: fixed;
@@ -80,8 +85,8 @@
 
 .hamb{
     /* background: crimson; */
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
