--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ section{
 /*-------------- MediaQuery-------------- */
 
 
-@media only screen and (min-width: 760px),(max-width: 800px){
+@media only screen and (min-width: 768px) and ( orientation: portrait){
   .container_chica{
     /* background: rgba(234, 0, 255, 0.294); */
     width: 900px;
@@ -238,7 +238,7 @@ section{
 }
 
 
-@media only screen and (max-width: 450px) { 
+@media only screen and (max-width:450px) and ( orientation: portrait){ 
 
   body{
     overflow: hidden;
