--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -20,19 +20,31 @@
   font-size: 1.6rem;
   font-weight: bold;  
 }
-.skills{
+.skills, .soft_skills{
   background: rgb(95, 192, 245);
   position: absolute;
   text-transform: uppercase;
   letter-spacing: 3px;
-  top: 0;
-  left: 0;
+ 
   width: 300px;
   height: 100vh;
   font-size: 1rem;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.skills .titulo{
+.skills{
+  top: 0;
+  left: 0;
+}
+
+.soft_skills{
+  top: 0;
+  right: 0;
+}
+
+.skills .titulo, .soft_skills .titulo{
   text-transform: uppercase;
   font-size: 1.5rem;
   letter-spacing: 0px;
