--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -9,8 +9,7 @@
 .cerebro{
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   background: rgb(131, 204, 243);
   width: 100vw;
   height: 100vh;
@@ -22,10 +21,9 @@
 }
 .skills, .soft_skills{
   background: rgb(95, 192, 245);
-  position: absolute;
+  /* position: absolute; */
   text-transform: uppercase;
   letter-spacing: 3px;
- 
   width: 300px;
   height: 100vh;
   font-size: 1rem;
@@ -34,7 +32,7 @@
   flex-direction: column;
   justify-content: center;
 }
-.skills{
+/* .skills{
   top: 0;
   left: 0;
 }
@@ -42,7 +40,7 @@
 .soft_skills{
   top: 0;
   right: 0;
-}
+} */
 
 .skills .titulo, .soft_skills .titulo{
   text-transform: uppercase;
@@ -52,10 +50,13 @@
   color: #ffe221;
   margin-top: 2rem;
 }
-
-
+.container_svg{
+  /* background: #ffe221; */
+  width: 50vw;
+  height: 100vh;
+}
 #cerebro_svg{
-  width: 50%;
+  width: 100%;
   height: 100%;
 }
 
@@ -96,4 +97,42 @@
       stroke: rgb(255, 254, 254);
       stroke-dashoffset: 0;
   }
+}
+
+
+/* ----------------MediaQuery----------------- */
+@media only screen and (max-width:768px){
+  .cerebro{
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .skills, .soft_skills{
+    width: 100vw;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    font-size: 0.7rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .soft_skills{
+   position: relative;
+  }
+  .container_svg{
+    width: 100vw;
+  }
+  #cerebro_svg{
+    width: 100%;
+    height: 100%;
+  }
+  .cerebro_izq,.cerebro_derch{
+    stroke-width: 22px;
+  }
+  .skills .titulo, .soft_skills .titulo{
+    font-size: 1rem;
+    margin-top: 0;
+    padding: 0.2rem 0;
+  }
+
 }
