--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -55,7 +55,22 @@
   width: 50vw;
   height: 100vh;
 }
+.imagen{
+  background: red;
+  position: absolute;
+  z-index: 0;
+  width: 50vw;
+  height: 100vh;
+}
+.imagen img{
+  width: 100%;
+  height: 100%;
+}
 #cerebro_svg{
+ position: absolute;
+ top: 0;
+ left: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
 }
@@ -121,6 +136,10 @@
   }
   .container_svg{
     width: 100vw;
+  }
+  .imagen{
+    width: 100vw;
+    height: auto;
   }
   #cerebro_svg{
     width: 100%;
