--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -30,7 +30,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
 }
 /* .skills{
   top: 0;
@@ -46,17 +46,44 @@
   text-transform: uppercase;
   font-size: 1.5rem;
   letter-spacing: 0px;
-  font-weight: bold; 
-  color: #ffe221;
+  font-weight: bolder; 
+  color: #fbdc12;
   margin-top: 2rem;
 }
+.skill{
+  /* background: cornflowerblue; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 230px;
+  margin-top: .5rem;
+}
+
+.dots{
+  width: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.dots div{
+  width: 10px;
+  height: 10px;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+
+.soft_skills p{
+  margin-top: .5rem;
+}
+
 .container_svg{
   /* background: #ffe221; */
   width: 50vw;
   height: 100vh;
 }
 .imagen{
-  background: red;
+ /*  background: red; */
   position: absolute;
   z-index: 0;
   width: 50vw;
