--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 
-.cerebro{
+#cv{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -34,7 +34,7 @@
 }
 .skills .titulo, .soft_skills .titulo{
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   letter-spacing: 0px;
   font-weight: bolder; 
   color: #fbdc12;
@@ -65,7 +65,7 @@
   margin-top: .5rem;
 }
 .container_svg{
-  background: #ffe221;
+  /* background: #ffe221; */
   width: 900px;
   height: 100vh;
  /*  width: 50vw;
@@ -85,6 +85,18 @@
   width: 100%;
   height: 100%;
 }
+.brillo{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 37%;
+  opacity: 0;
+  background:rgba(253, 253, 219, 0.8);
+  border-radius: 50%;
+  box-shadow: 0 0 25px rgba(253, 253, 219, 0.8);
+  animation: brillo 10s 3s forwards;
+}
+
 .container_cerebro_svg{
   position: absolute;
  /*  background: chartreuse; */
@@ -92,19 +104,20 @@
  height: 100vh;
 }
 #cerebro_svg{
- position: absolute;
+  /* background: rgba(255, 0, 0, 0.37); */
+/*  position: absolute;
  top: 0;
- left: 0;
+ left: 0; */
   z-index: 1;
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
 }
 
 .cerebro_izq{
-  animation: draw_izq 4s 1.6s linear forwards;  
+  animation: draw_izq 3s linear forwards;  
 }
 .cerebro_derch{
-  animation: draw_derch 4s linear forwards;  
+  animation: draw_derch 3s linear forwards;  
 }
 
 .cerebro_izq,.cerebro_derch{
@@ -139,12 +152,30 @@
   }
 }
 
+@keyframes brillo{
+  0%{
+    opacity: 0;
+    box-shadow: 0 0 25px rgba(253, 253, 219, 0.8);
+  }
+  30%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 1;
+    box-shadow: 0 0 25px rgba(253, 253, 219, 0.8),
+    0 0 1px 15px rgba(253, 253, 219, 0.8), 0 0 1px 40px rgba(253, 253, 219, 0.3),
+    0 0 1px 90px rgba(253, 253, 219, 0.2), 0 0 1px 160px rgba(253, 253, 219, 0.1); 
+  }
+}
+
+
+
 
 /* ----------------MediaQuery----------------- */
 @media only screen and (max-width:768px){
   .cerebro{
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   .skills, .soft_skills{
     width: 100vw;
