--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html{
   height: 100vh;
 }
 
+
 /* ----------TABS---------- */
 [data-content]{  /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
   display: none;
@@ -21,4 +22,12 @@ html{
   display: block;
 }
 /* ----------------------------------------------------------------- */
-
+#about_me{
+  width: 100vw;
+  height: 100vh;
+  background: rosybrown;
+}
+#inicio{
+  width: 100vw;
+  height: 100vh;
+}
