--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -7,17 +7,21 @@
 }
 
 #curriculum{
+  width: 100vw;
+  height: 100vh;  
+}
+.wraper_cv{
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   background: rgb(131, 204, 243);
-  width: 100vw;
-  height: 100vh;
   color: white;
   font-family: 'Jost', sans-serif;
   text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
   font-size: 1.6rem;
-  font-weight: bold;   
+  font-weight: bold; 
 }
 .skills, .soft_skills{
   background: rgb(95, 192, 245);
