--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -91,15 +91,15 @@
   height: 100%;
 }
 .brillo{
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 20px;
+  border-radius: 20px;
   position: absolute;
   top: 37%;
   opacity: 0;
   background:rgba(253, 253, 219, 0.8);
-  border-radius: 50%;
   box-shadow: 0 0 25px rgba(253, 253, 219, 0.8);
-  animation: brillo 10s 3s forwards;
+  animation: brillo 10s 3s infinite ; /* alternate */
 }
 
 .container_cerebro_svg{
@@ -160,15 +160,27 @@
 @keyframes brillo{
   0%{
     opacity: 0;
-    box-shadow: 0 0 25px rgba(253, 253, 219, 0.8);
+    box-shadow: 0 0 25px rgba(253, 253, 219, 0.6);
   }
   30%{
     opacity: 1;
+    box-shadow: 0 0 25px rgba(253, 253, 219, 0.5),
+    0 0 1px 15px rgba(253, 253, 219, 0.3);
+  }
+  50%{
+    box-shadow: 0 0 25px rgba(253, 253, 219, 0.6),
+    0 0 1px 15px rgba(253, 253, 219, 0.4), 0 0 1px 40px rgba(253, 253, 219, 0.3),
+  }
+  70%{
+    box-shadow: 0 0 25px rgba(253, 253, 219, 0.6),
+    0 0 1px 15px rgba(253, 253, 219, 0.4), 0 0 1px 40px rgba(253, 253, 219, 0.3),
+    0 0 1px 90px rgba(253, 253, 219, 0.2),
   }
   100%{
     opacity: 1;
-    box-shadow: 0 0 25px rgba(253, 253, 219, 0.8),
-    0 0 1px 15px rgba(253, 253, 219, 0.8), 0 0 1px 40px rgba(253, 253, 219, 0.3),
+    transform: scale(2);
+    box-shadow: 0 0 25px rgba(253, 253, 219, 0.6),
+    0 0 1px 15px rgba(253, 253, 219, 0.4), 0 0 1px 40px rgba(253, 253, 219, 0.3),
     0 0 1px 90px rgba(253, 253, 219, 0.2), 0 0 1px 160px rgba(253, 253, 219, 0.1); 
   }
 }
