--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -90,17 +90,6 @@
   width: 100%;
   height: 100%;
 }
-.brillo{
-  width: 80px;
-  height: 20px;
-  border-radius: 20px;
-  position: absolute;
-  top: 37%;
-  opacity: 0;
-  background:rgba(253, 253, 219, 0.8);
-  box-shadow: 0 0 25px rgba(253, 253, 219, 0.8);
-  animation: brillo 10s 3s infinite ; /* alternate */
-}
 
 .container_cerebro_svg{
   position: absolute;
@@ -119,18 +108,28 @@
 }
 
 .cerebro_izq{
-  animation: draw_izq 3s linear forwards;  
+  animation: draw_izq 3s linear forwards, brillo_svg 0.7s 4s infinite;  
 }
 .cerebro_derch{
-  animation: draw_derch 3s linear forwards;  
+  animation: draw_derch 3s linear forwards, brillo_svg 0.7s 4s infinite;  
+}
+.cerebro_abajo{
+  animation: draw_derch 3s linear forwards;
 }
 
-.cerebro_izq,.cerebro_derch{
+.cerebro_izq,.cerebro_derch,.cerebro_abajo{
   fill-opacity: 0; /* no se ve el interior, solo el borde que ponemos despues */
   stroke-width: 18px;
   stroke-dashoffset: 0;
   stroke-dasharray: 80000;
   /* stroke: rgb(255, 254, 254); */
+}
+.cerebro_neuronas{
+  fill-opacity: 0; /* no se ve el interior, solo el borde que ponemos despues */
+  stroke-width: 18px;
+  stroke-dashoffset: 0;
+  stroke-dasharray: 80;
+  animation: draw_derch 3s 3s linear infinite,brillo_svg 0.7s 4s infinite;
 }
 
 
@@ -157,31 +156,24 @@
   }
 }
 
-@keyframes brillo{
+ 
+@keyframes brillo_svg{
   0%{
-    opacity: 0;
-    box-shadow: 0 0 25px rgba(253, 253, 219, 0.6);
+    -webkit-filter:drop-shadow( 0 0 3px rgba(255, 255, 255, 0.5)) drop-shadow(0 0 10px rgba(255, 255, 255, 0.4)) ;
+            filter:drop-shadow( 0 0 3px rgba(255, 255, 255, 0.5)) drop-shadow(0 0 10px rgba(255, 255, 255, 0.4));
   }
-  30%{
-    opacity: 1;
-    box-shadow: 0 0 25px rgba(253, 253, 219, 0.5),
-    0 0 1px 15px rgba(253, 253, 219, 0.3);
-  }
-  50%{
-    box-shadow: 0 0 25px rgba(253, 253, 219, 0.6),
-    0 0 1px 15px rgba(253, 253, 219, 0.4), 0 0 1px 40px rgba(253, 253, 219, 0.3),
-  }
-  70%{
-    box-shadow: 0 0 25px rgba(253, 253, 219, 0.6),
-    0 0 1px 15px rgba(253, 253, 219, 0.4), 0 0 1px 40px rgba(253, 253, 219, 0.3),
-    0 0 1px 90px rgba(253, 253, 219, 0.2),
+  20%{
+    -webkit-filter:drop-shadow( 0 0 3px rgba(255, 255, 255, 0.5)) drop-shadow(0 0 10px rgba(255, 255, 255, 0.4)) drop-shadow(0 0 20px rgba(255, 255, 255, 0.3)) drop-shadow(0 0 40px #0ba9ca) 
+    drop-shadow(0 0 70px #ffffff) drop-shadow(0 0 80px rgba(255, 255, 255, 0.15));
+            filter:drop-shadow( 0 0 3px rgba(255, 255, 255, 0.5)) drop-shadow(0 0 10px rgba(255, 255, 255, 0.4)) drop-shadow(0 0 20px rgba(255, 255, 255, 0.3)) drop-shadow(0 0 40px #0ba9ca) 
+            drop-shadow(0 0 70px #ffffff) drop-shadow(0 0 80px rgba(255, 255, 255, 0.15));
   }
   100%{
-    opacity: 1;
-    transform: scale(2);
-    box-shadow: 0 0 25px rgba(253, 253, 219, 0.6),
-    0 0 1px 15px rgba(253, 253, 219, 0.4), 0 0 1px 40px rgba(253, 253, 219, 0.3),
-    0 0 1px 90px rgba(253, 253, 219, 0.2), 0 0 1px 160px rgba(253, 253, 219, 0.1); 
+    -webkit-filter:drop-shadow( 0 0 3px rgba(255, 255, 255, 0.616)) drop-shadow(0 0 10px rgba(255, 255, 255, 0.459)) drop-shadow(0 0 20px rgba(255, 255, 255, 0.349)) drop-shadow(0 0 40px #0ba9ca) 
+    drop-shadow(0 0 70px #ffffff) drop-shadow(0 0 100px rgba(255, 255, 255, 0.216));
+            filter:drop-shadow( 0 0 3px rgba(255, 255, 255, 0.616)) drop-shadow(0 0 10px rgba(255, 255, 255, 0.459)) drop-shadow(0 0 20px rgba(255, 255, 255, 0.349)) drop-shadow(0 0 40px #0ba9ca) 
+            drop-shadow(0 0 70px #ffffff) drop-shadow(0 0 100px rgba(255, 255, 255, 0.216));
+  
   }
 }
 
@@ -207,7 +199,7 @@
   .soft_skills{
    position: relative;
   }
-  .container_lenguages{
+  .container_languages{
     margin-top: 3.5rem;
   }
   .container_svg{
