--- a/menu.css
+++ b/menu.css
@@ -51,10 +51,10 @@
     cursor: pointer;
 }
 
-.navegar span {
+/* .navegar span {
     animation: glow-in 3s 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
     text-shadow: 3px 2px 0 rgba(0, 0, 0, .2);
-}
+} */
 .navegar li:hover{
     color: rgb(48, 23, 128);   
 }
