--- a/cerebro/cerebro.css
+++ b/cerebro/cerebro.css
@@ -9,7 +9,7 @@
 #curriculum{
   width: 100vw;
   height: 100vh; 
-  animation: section_zoomIn 1s linear ; 
+  /* animation: section_zoomIn 1s linear ;  */
 }
 .wraper_cv{
   width: 100%;
@@ -100,14 +100,13 @@
   height: 100%;
 }
 
-.container_cerebro_svg{
-  position: absolute;
- /*  background: chartreuse; */
- width: 900px;
- height: 100vh;
+.container_svg{
+  background: chartreuse;
+  width: 900px;
+  height: 100vh;
 }
 #cerebro_svg{
-  /* background: rgba(255, 0, 0, 0.37); */
+  background: rgba(255, 0, 0, 0.37);
 /*  position: absolute;
  top: 0;
  left: 0; */
@@ -260,7 +259,7 @@
   }
   #cerebro_svg{
     /* background: #fbdc12; */
-    width: 200%;
+    width: 100%;
     height: 100%;
   }
   .cerebro_izq,.cerebro_derch{
