--- a/menu.css
+++ b/menu.css
@@ -15,19 +15,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: cornflowerblue; */
-   /*  background: rgb(75, 173, 226); */
-   background: #0361b3;
+    background: #0361b3;
     transition: clip-path 0.6s linear;
     clip-path: circle(0% at 100% 1%);/* circulo */
-    /* clip-path: polygon(100% 47%, 100% 39%, 100% 26%, 100% 18%, 100% 0, 100% 0, 100% 100%, 100% 100%, 100% 92%, 100% 83%, 100% 72%, 100% 53%); */
 }
   
 .background.active{
     transition: clip-path 0.6s linear;
     box-shadow: -10px 5px 5px rgba(74, 75, 75, 0.664);
     clip-path: circle(73.6% at 80% 40%);/* circulo */
-/*  clip-path: polygon(2% 46%, 14% 32%, 5% 22%, 8% 10%, 0 0, 100% 0, 100% 100%, 4% 100%, 0 91%, 13% 80%, 2% 68%, 11% 55%); */
 }
 
 .navegar{
@@ -49,14 +45,11 @@
     text-shadow: 3px 3px 0 rgba(0, 0, 0, .2);
     list-style: none; 
     cursor: pointer;
+    margin-top: 1rem;
 }
 
-/* .navegar span {
-    animation: glow-in 3s 0.9s cubic-bezier(0.075, 0.82, 0.165, 1);
-    text-shadow: 3px 2px 0 rgba(0, 0, 0, .2);
-} */
 .navegar li:hover{
-    color: rgb(48, 23, 128);   
+  color: #fbdc12;   
 }
 .container_menu{
     width: 40px;
@@ -150,7 +143,6 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   opacity: 0;
@@ -170,8 +162,8 @@
   color:rgb(255, 255, 255);
   background:rgba(10, 10, 10, 0.2);
   width:8rem;
-  border:none;
   height:8rem;
+  border:none;
   border-radius:50%;
   box-shadow:5px 5px 10px rgba(50, 50, 0, 0.2) ,-5px -5px 10px rgba(255,255,255,0.1); 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* para borrar el recuadro azul que aparece por defecto con onclick */
@@ -188,8 +180,8 @@
 
 @media all and (max-width:1440px){
   .contact{
-      width: 15rem;
-      height: 15rem;
+      width: 3rem;
+      height: 3rem;
       margin-top:30%;
   }
 }
@@ -197,16 +189,16 @@
 
 @media all and (max-width:768px){
     .container_contact{
-        flex-direction: column;
+        flex-direction: row;
         height: 100vh;
         align-items: center;
         justify-content: center;
     }
     .contact{
-        height: 6rem;
-        width: 6rem;
-        font-size: 2.6rem;
-        margin-top:15%;
+        height: 3rem;
+        width: 3rem;
+        font-size: 1rem;
+        margin-left:1rem;
     }
 }
   
@@ -290,18 +282,17 @@
   /*-------------- MediaQuery-------------- */
 
   @media only screen and (max-width:450px) and ( orientation: portrait){
-/*   .container_contact.active{
-    animation: bounceIn .7s 1.2s forwards;
-  }
-  .hamb{
-    animation: bounceIn .7s 13.3s linear forwards ;
-  }
-  .container_menu{
-    animation: ballBouncing 3s 10s linear forwards;
-  } */
+
   .container_menu:hover{
     box-shadow: -1px 6px 3px rgba(50, 50, 0, 0.2);
-  }  
+  } 
+  .navegar li{
+    text-shadow: 3px 3px 0 rgba(0, 0, 0, .2);
+    list-style: none; 
+    cursor: pointer;
+    margin-top: 1.5rem;
+    font-size: 1.7rem;
+} 
 
 }
 
