--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -6,6 +6,22 @@
     box-sizing: border-box;
 }
 
+.about_me{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background: rgb(140, 206, 241); */
+  background: rgb(67, 173, 243);
+  width: 100vw;
+  height: 100vh;
+  color: white;
+  font-family: 'Jost', sans-serif;
+  text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
+  font-size: 1.6rem;
+  font-weight: bold;  
+}
+
 .titulo{
   text-transform: uppercase;
   font-size: 2.3rem;
@@ -19,20 +35,7 @@
   animation: waviy 1s 2s both;
   animation-delay: calc(.1s * var(--i))
 }
-.about_me{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: rgb(140, 206, 241);
-    width: 100vw;
-    height: 100vh;
-    color: white;
-    font-family: 'Jost', sans-serif;
-    text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
-    font-size: 1.6rem;
-    font-weight: bold;  
-}
+
 .container_text{
     width: 40%;
     height: auto;
@@ -50,7 +53,7 @@
 }
 .container_text a{
   text-decoration: none; 
-  color: rgb(0, 119, 255);
+  color: rgb(0, 17, 255);
 }
 .container_text a:hover{
     color: rgba(129, 141, 163, 0.7);
@@ -125,6 +128,7 @@
   }
   .about_me{
     font-size: 1.7rem;
+    text-shadow: -1px 2px 2px rgba(50, 50, 0, 0.5);
   }
   .titulo{
     font-size: 2.2rem;
@@ -138,6 +142,7 @@
   }
   .about_me{
     font-size: 1.2rem;
+    text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.5);
   }
   .titulo{
     font-size: 2rem;
