--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -20,7 +20,7 @@
   /* background: rgb(140, 206, 241); */ /* azul-claro */
   /* background: rgb(67, 173, 243); */ /* azul-mas oscuro */
  /*  background: rgb(24, 52, 146); */
-  background:rgb(12, 35, 98);
+  /* background:rgb(12, 35, 98); */
   overflow: hidden;
   width: 100vw;
   height: 100vh;
@@ -28,7 +28,8 @@
   font-family: 'Jost', sans-serif;
   text-shadow: -1px 3px 3px rgba(50, 50, 0, 0.2);
   font-size: 1.6rem;
-  font-weight: bold;  
+  font-weight: bold; 
+  animation: bg_about_me 8s forwards; 
 }
 
 .titulo{
@@ -80,6 +81,14 @@
 
 /* -------------------Animations----------------------- */
 
+@keyframes bg_about_me {
+  0%{
+    background: rgb(67, 173, 243);
+  }
+  100%{
+    background:rgb(0, 14, 54);
+  }
+}
 
 @keyframes sectionAnimation {
   0% {
@@ -128,6 +137,8 @@
     opacity: 1;
   }
 }
+
+
 
 /* ---------------MediaQuery---------------- */
 
@@ -180,8 +191,8 @@
 }
 
 @keyframes rocket_launch {
-  to{
-    transform: translateY(-1200px);
+  100%{
+    transform: translateY(-1300px);
   }
 }
 
@@ -189,9 +200,9 @@
   0%{
     opacity: 1;
   }
-  to{
+  100%{
     opacity: 0.6;
-    transform: translateY(-1200px)
+    transform: translateY(-1300px)
   }
 }
 
@@ -210,7 +221,7 @@
   height: 100px;
   position: absolute;
   z-index: 3;
-  animation: rocket_launch 15s 7s infinite ;
+  animation: rocket_launch 15s 10.5s infinite ;
 }
 
 .rocket-wrapper {
@@ -229,7 +240,7 @@
   position: absolute;
   opacity: 0;
   transition: 250ms ease;
-  animation: flame 15s 7s infinite;
+  animation: flame 15s 10.5s  infinite;
 }
 .flame-wrapper{
   width: 50px;
