rocket svg nuevo

--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -192,7 +192,7 @@
 
 @keyframes rocket_launch {
   100%{
-    transform: translateY(-1300px);
+    transform: translateY(-1300px) rotate(-45deg)
   }
 }
 
@@ -206,6 +206,17 @@
   }
 }
 
+@keyframes draw {
+  0%{
+      stroke: rgb(255, 254, 254);
+      stroke-dashoffset: 80000;
+  }
+  100%{
+      stroke: rgb(255, 254, 254);
+      stroke-dashoffset: 0;
+  }
+}
+
 
 .container_rocket {
   /* background: rgba(255, 0, 0, 0.452); */
@@ -215,14 +226,33 @@
   width: 90px;
   height: 100px;
 }
+.rocket{
+  fill-opacity: 0; /* no se ve el interior, solo el borde que ponemos despues */
+  stroke-width: 18px;
+  stroke-dashoffset: 0;
+  stroke-dasharray: 80000;
+}
+#rocket_svg{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  transform: rotate(-45deg);
+  animation: rocket_launch 15s 10.5s infinite ;
+}
 
-.rocket {
+.rocket{
+  animation: draw 4s 1s linear forwards;  
+}
+
+/* .rocket {
   width: 90px;
   height: 100px;
   position: absolute;
   z-index: 3;
   animation: rocket_launch 15s 10.5s infinite ;
-}
+} */
 
 .rocket-wrapper {
  /*  background: rgba(187, 188, 143, 0.671); */
